samples/_failures_safe/1761297182_e59084_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e188e1cc.c: In function ‘main’:
./samples/SAFE/__tmp_e188e1cc.c:159:9: error: expected declaration or statement at end of input
  159 |         printf("Operation failed\n");
      |         ^~~~~~
./samples/SAFE/__tmp_e188e1cc.c:159:9: error: expected declaration or statement at end of input
